fix horizontal overflow

--- a/src/SCSS/_structure-blog.scss
+++ b/src/SCSS/_structure-blog.scss
@@ -8,6 +8,11 @@
   font-size: 18px;
 }
 
+body{
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 $media-offset: 18%;
 
 //Structure
